update some thing
